<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.wezebra.zebraking.ui.myaccount.AssetActivity">

    <LinearLayout
        android:id="@+id/asset_total_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        android:background="@color/dark_grey">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large"
            android:text="@string/asset_total"/>

        <TextView
            android:id="@+id/asset_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textColor="@color/white"
            android:textSize="@dimen/font_xlarge"
            tools:text="1500.00"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/asset_layout"
        android:layout_below="@id/asset_total_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@color/light_grey"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="@string/asset_available"/>

            <TextView
                android:id="@+id/asset_available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/font_large"
                tools:text="893.10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="@string/asset_block"/>

            <TextView
                android:id="@+id/asset_freeze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/font_large"
                tools:text="500.00"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="@string/asset_invested"/>

            <TextView
                android:id="@+id/asset_invested"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/font_large"
                android:text="893.10"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/asset_tip"
        android:layout_below="@id/asset_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/main_color"
        android:textSize="@dimen/font_large"
        android:text="@string/tip_block"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/main_color"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/asset_cash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_white"
            android:textSize="@dimen/font_large"
            android:text="@string/cash"
            android:drawableRight="@drawable/divider_tab"
            android:background="@color/main_color"/>
        

        <Button
            android:id="@+id/asset_recharge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/text_white"
            android:textSize="@dimen/font_large"
            android:text="@string/recharge"
            android:background="@color/main_color"/>

        </LinearLayout>

</RelativeLayout>
