<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="bottom"
        android:padding="@dimen/button_text_padding"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_large"
            android:text="您只需选择完善以下任意一项信息即可"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <include
        layout="@layout/empty_divider_layout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>
    <RelativeLayout
        android:id="@+id/service_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/account_item">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:id="@+id/item_title_icon_service"
            android:src="@drawable/job_info_grey"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/item_title_icon_service">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="@string/title_activity_service_info"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="@dimen/font_small"
                android:text="@string/title_activity_service_info_detail"/>

        </LinearLayout>

        <ImageView
            android:id="@id/action_next_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_next_item_dark"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>


    <RelativeLayout
        android:id="@+id/company_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/account_item">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:id="@+id/item_title_icon_email"
            android:src="@drawable/email_grey"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/item_title_icon_email">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="@string/title_activity_company_email"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="@dimen/font_small"
                android:text="@string/title_activity_company_email_detail"/>

        </LinearLayout>

        <ImageView
            android:id="@id/action_next_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_next_item_dark"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>


    <RelativeLayout
        android:id="@+id/security_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/account_item">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:id="@+id/item_title_icon_security_auth"
            android:src="@drawable/social_security_grey"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/item_title_icon_security_auth">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="@string/title_activity_social_security_auth"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="@dimen/font_small"
                android:text="@string/title_activity_social_security_auth_dex"/>

        </LinearLayout>

        <ImageView
            android:id="@id/action_next_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_next_item_dark"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>

    <RelativeLayout
        android:id="@+id/public_acc_funds_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/account_item">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:id="@+id/item_title_icon_public"
            android:src="@drawable/paf_grey"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/item_title_icon_public">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_large"
                android:text="@string/title_activity_public_acc_funds_auth"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="@dimen/font_small"
                android:text="@string/title_activity_public_acc_funds_auth_des"/>

        </LinearLayout>

        <ImageView
            android:id="@id/action_next_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_action_next_item_dark"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"/>


</LinearLayout>
